# ruffle-android

./: .gitignore  Cargo.toml  settings.gradle.kts
.github/workflows/: build.yml  lint.yml
app/: build.gradle.kts
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/rs/ruffle/: InputEvents.kt  SmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/rs/ruffle/: AndroidFontRenderer.kt  KeepAliveService.kt  MainActivity.kt  PanicActivity.kt  PlayerActivity.kt  RestartActivity.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/layout/: keyboard.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
src/: audio.rs  custom_event.rs  java.rs  keycodes.rs  lib.rs  navigator.rs  seer2.rs  ui.rs
