[package]
# Underscore because the cargo-ndk gradle plugin doesn't transform a hyphen to it.
name = "ruffle_android"
version = "1.1.4"
authors = [
    "Ruffle contributors <ruffle@ruffle.rs>",
    "TÖRÖK Attila <torokati44@gmail.com>",
    "Nathan Adams <dinnerbone@dinnerbone.com>",
]
edition = "2018"
resolver = "2"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "symbols"

[dependencies]

android-activity = { version = "0.6.0", features = ["game-activity"] }
android_logger = "0.15.1"

jni = "0.21.1"
ndk = { version = "0.9.0", features = ["audio"] }
ndk-context = "0.1.1"

# Have to follow Ruffle with this.
wgpu = "27.0.1"

ruffle_common = { path = "../ruffle/core/common" }
ruffle_core = { path = "../ruffle/core", features = [
    "audio",
    "symphonia",
    "mp3",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }
ruffle_render_wgpu = { path = "../ruffle/render/wgpu" }
ruffle_video_software = { path = "../ruffle/video/software" }
ruffle_frontend_utils = { path = "../ruffle/frontend-utils", default-features = false, features = ["fs", "navigator", "rustls-tls"] }

log = "0.4.32"

# Redirect tracing to log
tracing = {version = "0.1.44", features = ["log", "log-always"]}
backtrace = "0.3.76"
async-task = "4.7.1"
async-channel = "2.5.0"

url = "2.5.2"
webbrowser = "1.1.0"

tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"]}
base64 = "0.22.1"

[features]
jpegxr = ["ruffle_core/jpegxr"]

# so Rascal doesn't pull in another copy of swf from crates.io
[patch.crates-io]
swf = { path = "../ruffle/swf" }
